# LibC3P

./: README.md
AutoTight_comparison/: .dockerignore  JINWU_SETUP.md  Makefile  REPRODUCE.md  demo_quick.py  environment.yml  log  requirements.txt
AutoTight_comparison/_scripts/: run_autotemplate.py  run_c3p_se3_axb_ycz_autotight.py  run_c3p_se3_axby_zcwd_autotight.py  run_c3p_se3_axxb_autotight.py  run_c3p_se3_axyb_autotight.py
AutoTight_comparison/auto_template/: learner.py  real_experiments.py
AutoTight_comparison/certifiable-tools/: .gitignore  README.md  environment.yml  requirements.txt  setup.cfg
AutoTight_comparison/certifiable-tools/.github/workflows/: python-app.yml  python-package-conda.yml
AutoTight_comparison/certifiable-tools/_examples/: README.md  test_prob_1.pkl  test_prob_10G.pkl  test_prob_10Gc.pkl  test_prob_10L.pkl  test_prob_10Lc.pkl  test_prob_11G.pkl  test_prob_11Gc.pkl  test_prob_11L.pkl  test_prob_11Lc.pkl  test_prob_12G.pkl  test_prob_12Gc.pkl  test_prob_12L.pkl  test_prob_12Lc.pkl  test_prob_13G.pkl  test_prob_13Gc.pkl  test_prob_13L.pkl  test_prob_13Lc.pkl  test_prob_14G.pkl  test_prob_15G.pkl  test_prob_16G.pkl  test_prob_16Gc.pkl  test_prob_16L.pkl  test_prob_16Lc.pkl  test_prob_2.pkl  test_prob_3.pkl  test_prob_4.pkl  test_prob_5.pkl  test_prob_7.pkl  test_prob_8Gc.pkl  test_prob_8L1.pkl  test_prob_8L1c.pkl  test_prob_8L2.pkl  test_prob_8L2c.pkl  test_prob_9.pkl  test_prob_9G.pkl  test_prob_9L1.pkl  test_prob_9L1c.pkl  test_prob_9c.pkl
AutoTight_comparison/certifiable-tools/_scripts/: compare_solvers.py
AutoTight_comparison/certifiable-tools/_test/: test_cliques.py  test_eig_tools.py  test_eopt_qp.py  test_eopt_solvers.py  test_sdp_solvers.py
AutoTight_comparison/certifiable-tools/cert_tools/: __init__.py  admm_clique.py  admm_solvers.py  base_clique.py  eig_tools.py  eopt_solvers.py  eopt_solvers_qp.py  fusion_tools.py  linalg_tools.py  sdp_solvers.py  sparse_solvers.py
AutoTight_comparison/docker/: Dockerfile  environment.runtime.yml
AutoTight_comparison/lifters/: c3p_se3_axb_ycz_lifter.py  c3p_se3_axby_zcwd_lifter.py  c3p_se3_axxb_lifter.py  c3p_se3_axyb_lifter.py  c3p_se3_dq_utils.py
AutoTight_comparison/lifters (copy)/: c3p_se3_axby_zcwd_lifter.py
AutoTight_comparison/poly_matrix/: __init__.py
PEM_YALMIP_comparisons/: J_func_AXBY_ZCWD.m  J_func_AXB_YCZ.m  J_func_AXXB.m  J_func_AXYB.m  P_func.m  Poses2vec.m  SEn_SOnp1.m  SEn_extract.m  Z_func.m  invs.m  perturb_SEn.m  perturb_rot.m  rand_SEn.m  reverseInvAs.m  reverseInvXs.m  reverseXs.m  vec.m  vec2Pose.m  vec2Poses.m  yalmip_AXBY_ZCWD_modified.m  yalmip_AXBY_ZCWD_modified_quat.m  yalmip_AXB_YCZ_modified.m  yalmip_AXXB_modified.m  yalmip_AXYB_modified.m
PEM_YALMIP_comparisons/YALMIP/solvers/: callfmincon.m
PEM_YALMIP_comparisons/sedumi/: adendotd.mexmaca64  adenscale.mexmaca64  blkchol.mexmaca64  bwblkslv.mexmaca64  bwdpr1.mexmaca64  cholsplit.mexmaca64  choltmpsiz.mexmaca64  ddot.mexmaca64  dpr1fact.mexmaca64  extractA.mexmaca64  findblks.mexmaca64  finsymbden.mexmaca64  fwblkslv.mexmaca64  fwdpr1.mexmaca64  getada1.mexmaca64  getada2.mexmaca64  getada3.mexmaca64  givensrot.mexmaca64  incorder.mexmaca64  invcholfac.mexmaca64  iswnbr.mexmaca64  ordmmdmex.mexmaca64  partitA.mexmaca64  psdframeit.mexmaca64  psdinvjmul.mexmaca64  qblkmul.mexmaca64  qrK.mexmaca64  quadadd.mexmaca64  sortnnz.mexmaca64  sqrtinv.mexmaca64  symbfwblk.mexmaca64  symfctmex.mexmaca64  urotorder.mexmaca64  vecsym.mexmaca64
aruco_extrinsic_calib_C3P/: CMakeLists.txt  README.md  package.xml
aruco_extrinsic_calib_C3P/include/aruco_extrinsic_calib_c3p/: camchain_yaml.h  handeye_axxb.h  pose_utils.h  xy_yaml.h  xyzw_yaml.h
aruco_extrinsic_calib_C3P/src/: camchain_yaml.cpp  extract_aruco_from_bag.cpp  handeye_axxb.cpp  overlay_reprojection_from_bag.cpp  overlay_reprojection_zcwd_from_bag.cpp  pose_utils.cpp  robot_world_handeye_solver.cpp  verify_axby_zcwd.cpp  verify_extrinsics.cpp  xy_yaml.cpp  xyzw_yaml.cpp
c3p_accuracy_comparison/: CMakeLists.txt  README.md  scripts
c3p_accuracy_comparison/matlab/: benchmark_accuracy_c3p_boxplot.m  benchmark_c3p_noise_sweep_boxplot_summary.m
c3p_accuracy_comparison/src/: benchmark_mc.cpp  c3p_noise_sweep.cpp  lm.cpp  lm.h  main.cpp  problems.cpp  problems.h  se3.cpp  se3.h  solvers.cpp  solvers.h  solvers.h.bak
simulation_4cam_pose/: CMakeLists.txt  main.cpp  main_smooth.cpp  main_smooth_fixed.cpp
simulation_4cam_pose/ros/: CMakeLists.txt
simulation_4cam_pose/ros/console_bridge/: CMakeLists.txt
simulation_4cam_pose/ros/cv_bridge/: .tar
simulation_4cam_pose/ros/cv_bridge/include/cv_bridge/: cv_bridge.h
simulation_4cam_pose/ros/include/livox_ros_driver2/: CustomMsg.h  CustomPoint.h
simulation_4cam_pose/ros/include/sensor_msgs/: point_field_conversion.h
simulation_4cam_pose/ros/ros_comm/test/test_rosbag/bag_migration_tests/test/: random_record.py
simulation_4cam_pose/ros/ros_comm/tools/rosbag/src/: play.cpp
simulation_4cam_pose/ros/ros_comm/utilities/xmlrpcpp/test/: Makefile
simulation_4cam_pose/ros/roscpp_core/rostime/src/: time.cpp
symbolic_verification/: CRLB_verification.m  Lie_differentiation.m
