<?xml version="1.0"?>
<package format="2">
  <name>aruco_extrinsic_calib_c3p</name>
  <version>0.1.0</version>
  <description>Multi-camera ArUco extraction and extrinsic verification (C3P).</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>

  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <build_depend>opencv3</build_depend>
  <exec_depend>opencv3</exec_depend>

</package>
